Updates project section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
 												Rock, Paper, or Scissors to the camera in real-time.</p>
 											<a href="https://github.com/maya-a-iuga/AiCore-Computer-Vision-Project" class="special">View Project</a>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/coronavirus.webp" alt="" /></a>
+											<h3 class="major">Covid SQL Data Exploration</h3>
+											<p>This project uses SQL and Tableau to perform data exploration & visualisation
+												on Covid-related datasets.
+											</p>
+											<a href="https://github.com/maya-a-iuga/Covid_SQL_Data_Exploration" class="special">View Project</a>
+										</article>
 									
 									</section>
 									<ul class="actions">
