--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Maya Iuga</h1>
-            <h3>Welcome to My Interactive CV</h3>
+            <h3>Welcome to My Interactive Resume</h3>
             <hr />
             <ul class="social">
                <li><a href="https://www.linkedin.com/in/maya-iuga/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
@@ -81,7 +81,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/me.jpg" alt="" />
+            <img class="profile-pic"  src="images/me.png" alt="" />
 
          </div>
 
@@ -91,7 +91,7 @@
 
             <h2>About Me</h2>
 
-            <p>Add about me section here
+            <p>I am a cloud engineer with 2 years experience designing and implementing complex cloud solutions on AWS and Azure, and over 5 years experience working in the world of big data.
             </p>
 
             <div class="row">
