updates spacing for bullet points in experinence section

--- a/index.html
+++ b/index.html
@@ -146,13 +146,20 @@
                   <p class="info"><a href="https://www.theaicore.com" target="_blank">AiCore</a> <span>&bull;</span> <em class="date">Mar 2023 - Present</em></p>
 
                   <p>
-                     - Managed the development and deployment of AWS and Azure solutions that met the strategic needs of a government-funded contract serving 250 clients and generating ~£2M in revenue.
-					 - Designed and facilitated the company’s data analytics platform migration to AWS, consolidating data from diverse sources into a unified destination & reducing querying time for up to 72 %.
-					 - Created custom Python scripts and GitHub Actions to automate daily updates from data sources, reducing manual work and increasing efficiency by 200 %.
-					 - Led the development of an end-to-end DevOps pipeline used by ~125 clients, utilizing Docker and Kubernetes for streamlined application deployment. 
-					 - Automated new application version deployments through Azure DevOps and Terraform, reducing deployment time by 52%.
-					 - Migrated an SQL Server database to Azure, implementing disaster recovery solutions that increased availability from 99.95% to >99.99%. Improved monitoring processes and regular maintenance checks.
-					 - <strong>Skills</strong>: · AWS · Azure · Python · SQL · Azure DevOps · Terraform · Linux · Kubernetes · Docker · Git · Linux
+					<div class="skills-section"></div>
+                    - Managed the development and deployment of AWS and Azure solutions that met the strategic needs of a government-funded contract serving 250 clients and generating ~£2M in revenue.
+					<div class="skills-section"></div>
+					- Designed and facilitated the company’s data analytics platform migration to AWS, consolidating data from diverse sources into a unified destination & reducing querying time for up to 72 %.
+					<div class="skills-section"></div>
+					- Created custom Python scripts and GitHub Actions to automate daily updates from data sources, reducing manual work and increasing efficiency by 200 %.
+					<div class="skills-section"></div>
+					- Led the development of an end-to-end DevOps pipeline used by ~125 clients, utilizing Docker and Kubernetes for streamlined application deployment. 
+					<div class="skills-section"></div>
+					- Automated new application version deployments through Azure DevOps and Terraform, reducing deployment time by 52%.
+					<div class="skills-section"></div>
+					- Migrated an SQL Server database to Azure, implementing disaster recovery solutions that increased availability from 99.95% to >99.99%. Improved monitoring processes and regular maintenance checks.
+					<div class="skills-section"></div>
+					- <strong>Skills</strong>: · AWS · Azure · Python · SQL · Azure DevOps · Terraform · Linux · Kubernetes · Docker · Git · Linux
                   </p>
 
                </div>
@@ -167,12 +174,18 @@
                   <p class="info"><a href="https://www.theaicore.com" target="_blank">AiCore</a> <span>&bull;</span> <em class="date">Sept 2022 - Mar 2023</em></p>
                   <p>
                      
-                     - Trained and supplied 180 clients with technical support in cloud & data engineering technologies. Decreased client training time by 52%.
-					 - Managed a team of 8 engineers with an annual turnover rate of 12.5%. Received promotion ahead of schedule.
-					 - Spearheaded the migration of a data processing pipeline to AWS, resulting in a 95 % increase in positive outcomes for clients on this project.
-					 - Automated the deployment of over 120 AWS & Databricks client accounts using CloudFormation.  
-					 - Increased security for shared AWS resources by implementing strict IAM policies.
-					 - <strong>Skills</strong>: · AWS · Python · SQL · Databricks · Spark · NoSQL · CloudFormation · Airflow · Kafka · Linux
+					<div class="skills-section"></div>
+					- Trained and supplied 180 clients with technical support in cloud & data engineering technologies. Decreased client training time by 52%.
+					<div class="skills-section"></div>
+					- Managed a team of 8 engineers with an annual turnover rate of 12.5%. Received promotion ahead of schedule.
+					<div class="skills-section"></div>
+					- Spearheaded the migration of a data processing pipeline to AWS, resulting in a 95 % increase in positive outcomes for clients on this project.
+					<div class="skills-section"></div>
+					- Automated the deployment of over 120 AWS & Databricks client accounts using CloudFormation.  
+					<div class="skills-section"></div>
+					- Increased security for shared AWS resources by implementing strict IAM policies.
+					<div class="skills-section"></div>
+					- <strong>Skills</strong>: · AWS · Python · SQL · Databricks · Spark · NoSQL · CloudFormation · Airflow · Kafka · Linux
                   </p>
                   
 
@@ -188,9 +201,12 @@
                   <h3>PhD Student - Neural Computation</h3>
                   <p class="info">EPFL</a> <span>&bull;</span> <em class="date">Nov 2020 - Mar 2022</em></p>
                   <p>
-                     - Implemented and developed a data analysis pipeline using Python, serving the analytical requirements of a team of 9 scientists.
-					 - Analyzed big data, including over 600GB of time series data and 80GB of video data to derive insights in neural computation research.
-					 - <strong>Skills</strong>: · Python · Git · Linux · Time Series Data · Data Analysis · GLMs · Deep Learning
+                    <div class="skills-section"></div>
+					- Implemented and developed a data analysis pipeline using Python, serving the analytical requirements of a team of 9 scientists.
+					<div class="skills-section"></div>
+					- Analyzed big data, including over 600GB of time series data and 80GB of video data to derive insights in neural computation research.
+					<div class="skills-section"></div>
+					- <strong>Skills</strong>: · Python · Git · Linux · Time Series Data · Data Analysis · GLMs · Deep Learning
                   </p>                  
 
                </div>
