completes education section

--- a/index.html
+++ b/index.html
@@ -340,15 +340,16 @@
 
          <div class="nine columns main-col">
 
-            <h3>Degree number 2</h3>
-                  <p class="info">degree name <span>&bull;</span></p>
+            <h3>PhD Candidate - Neural Computation</h3>
+                  <p class="info">EPFL, Lausanne, Switzerland <span>&bull;</span></p>
 
 				</div><!-- end skill-bars -->
 
             <div class="nine columns main-col">
 
-               <h3>Degree number 1</h3>
-                     <p class="info">degree name <span>&bull;</span></p>
+               <h3>MSci Neuroscience</h3>
+                     <p class="info">UCL, London, United Kingdom <span>&bull;</span></p>
+					 <p class="info">First Class Honours <span>&bull;</span></p>
    
                </div><!-- end skill-bars -->
             
