replaces projects titles

--- a/index.html
+++ b/index.html
@@ -235,16 +235,23 @@
 
                <div class="twelve columns">
 
-                  <h3>Project Number 1</h3>
+                  <h3>Data Analytics Platform Migration to AWS</h3>
+				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
 
                   <p>description project 1</p>
-                  <h3>Project Number 2</h3>
+
+                  <h3>Azure DevOps Pipeline</h3>
+				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
 
                   <p>description project 2</p>
-				  <h3>Project Number 3</h3>
+
+				  <h3>AWS Based Data Engineering Pipeline</h3>
+				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
 
                   <p>description project 3</p>
-				  <h3>Project Number 4</h3>
+
+				  <h3>Azure Database Migration</h3>
+				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
 
                   <p>description project 4</p>
 
@@ -341,15 +348,15 @@
          <div class="nine columns main-col">
 
             <h3>PhD Candidate - Neural Computation</h3>
-                  <p class="info">EPFL, Lausanne, Switzerland <span>&bull;</span></p>
+                  <p class="info">EPFL, Lausanne, Switzerland </p>
 
 				</div><!-- end skill-bars -->
 
             <div class="nine columns main-col">
 
                <h3>MSci Neuroscience</h3>
-                     <p class="info">UCL, London, United Kingdom <span>&bull;</span></p>
-					 <p class="info">First Class Honours <span>&bull;</span></p>
+                     <p class="info">UCL, London, United Kingdom </p>
+					 <p class="info">First-Class Honours </p>
    
                </div><!-- end skill-bars -->
             
