adds first project

--- a/index.html
+++ b/index.html
@@ -236,9 +236,15 @@
                <div class="twelve columns">
 
                   <h3>Data Analytics Platform Migration to AWS</h3>
-				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
+				  <p class="info"><a href="https://drive.google.com/file/d/1Iajzs-srUdnN4KwQHxEQ1Z6dHqDQT6BG/view?usp=share_link" target="_blank">Architecture Diagram</a> </p>
 
-                  <p>description project 1</p>
+				  <div class="skills-section"></div>
+				   - Designed and lead the migration of the company's data analytics platform to AWS, reducing querying time by up to 70%
+				   - Consolidated data from diverse sources (Google Sheets, client portal, HubSpot) into a unified destination on AWS. 
+				   - Utilized custom written Python scripts and CI/CD pipelines using GitHub Actions to perform daily data uploads to both DynamoDB and Amazon RDS.
+				   - Performed real-time updates from the client portal, leveraging an EventBridge-Segment integration to update DynamoDB tables.
+				   - Perfomed ETL transformations on data from all sources using AWS Glue. Stored transformed & compressed data in S3.
+				   - Utilized Athena to query data and Amazon QuickSight to perform visualisations.
 
                   <h3>Azure DevOps Pipeline</h3>
 				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
@@ -256,10 +262,10 @@
                   <p>description project 4</p>
 
 				  <h3>AWS Cloud Resume Challenge</h3>
-                  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
+                  <p class="info"><a href="" target="_blank">In Progress</a> </p>
 
                   <p>
-					Description
+					
                   </p>
                </div>
 
