--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
 				  <p class="info"><a href="https://drive.google.com/file/d/1Iajzs-srUdnN4KwQHxEQ1Z6dHqDQT6BG/view?usp=share_link" target="_blank">Architecture Diagram</a> </p>
 
 					<div class="skills-section"></div>
-					- Designed and lead the migration of the company's data analytics platform to AWS, reducing querying time by up to 70%
+					- Designed and lead the migration of the company's data analytics platform to AWS, reducing querying time by up to 70%.
 					<div class="skills-section"></div>
-					- Consolidated data from diverse sources (Google Sheets, client portal, HubSpot) into a unified destination on AWS. 
+					- Consolidated data from diverse sources (internal portal, Google Sheets, HubSpot) into a unified destination on AWS. 
 					<div class="skills-section"></div>
 					- Utilized custom written Python scripts and CI/CD pipelines using GitHub Actions to perform daily data uploads to both DynamoDB and Amazon RDS.
 					<div class="skills-section"></div>
@@ -252,9 +252,20 @@
 					- Utilized Athena to query data and Amazon QuickSight to perform visualisations.
 
                   <h3>Azure DevOps Pipeline</h3>
-				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
+				  <p class="info"><a href="https://drive.google.com/file/d/1OYz4IVYmIVplzLzeBButFUrqhHYQzOwX/view?usp=share_link" target="_blank">Architecture Diagram</a> </p>
 
-                  <p>description project 2</p>
+					<div class="skills-section"></div>
+					- Integrated a Python Flask web application in a comprehensive DevOps pipeline.
+					<div class="skills-section"></div>
+					- Containerized the web application using Docker.
+					<div class="skills-section"></div>
+					- Defined Kubernetes deployment manifests for the application & implemented a rolling update strategy for application updates.
+					<div class="skills-section"></div>
+					- Leveraged Terraform to provision Azure resources & deployed Kubernetes manifests on an AKS cluster.
+					<div class="skills-section"></div>
+					- Utilized Azure DevOps to automate Docker image build & deployment of new application versions on the AKS cluster.
+					<div class="skills-section"></div>
+					- Monitored application health using Azure Monitor.
 
 				  <h3>AWS Based Data Engineering Pipeline</h3>
 				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
