adds link to resume

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                <div class="columns download">
                   <p>
-                    <a href="" class="button" onclick="sendNotification()"><i class="fa fa-download"></i>Download Resume</a>
+                    <a href="https://docs.google.com/document/d/1y3WyDbIk9azO2VZ5NkGEiyQbeu_exYlPM16dbaj6frU/edit?usp=sharing" class="button" onclick="sendNotification()"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                 </div>
                 
@@ -237,7 +237,7 @@
 
                   <h3>Data Analytics Platform Migration to AWS</h3>
 				  <p class="info"><a href="https://drive.google.com/file/d/1Iajzs-srUdnN4KwQHxEQ1Z6dHqDQT6BG/view?usp=share_link" target="_blank">Architecture Diagram</a> </p>
-
+                  <p>
 					<div class="skills-section"></div>
 					- Designed and lead the migration of the company's data analytics platform to AWS, reducing querying time by up to 70%.
 					<div class="skills-section"></div>
@@ -250,10 +250,11 @@
 					- Perfomed ETL transformations on data from all sources using AWS Glue. Stored transformed & compressed data in S3.
 					<div class="skills-section"></div>
 					- Utilized Athena to query data and Amazon QuickSight to perform visualisations.
+				  </p>
 
                   <h3>Azure DevOps Pipeline</h3>
 				  <p class="info"><a href="https://drive.google.com/file/d/1OYz4IVYmIVplzLzeBButFUrqhHYQzOwX/view?usp=share_link" target="_blank">Architecture Diagram</a> </p>
-
+                  <p>
 					<div class="skills-section"></div>
 					- Integrated a Python Flask web application in a comprehensive DevOps pipeline.
 					<div class="skills-section"></div>
@@ -266,6 +267,7 @@
 					- Utilized Azure DevOps to automate Docker image build & deployment of new application versions on the AKS cluster.
 					<div class="skills-section"></div>
 					- Monitored application health using Azure Monitor.
+				  </p>
 
 				  <h3>AWS Based Data Engineering Pipeline</h3>
 				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
