Adds third project

--- a/index.html
+++ b/index.html
@@ -269,10 +269,21 @@
 					- Monitored application health using Azure Monitor.
 				  </p>
 
-				  <h3>AWS Based Data Engineering Pipeline</h3>
-				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
+				  <h3>AWS Data Engineering Pipeline</h3>
+				  <p class="info"><a href="https://drive.google.com/file/d/14tBF-hFcxP3tXXkm9kLjv1kzPDJwOObR/view?usp=share_link" target="_blank">Architecture Diagram</a> </p>
 
-                  <p>description project 3</p>
+                  <p>
+					<div class="skills-section"></div>
+					- Developed an end-to-end AWS-hosted data engineering pipeline. Introduced a Lambda architecture, supporting both batch and stream processing.
+					<div class="skills-section"></div>
+					- Created a REST API using API Gateway, and used MSK and MSK Connect to distribute data from the REST API to a S3 Data Lake.
+					<div class="skills-section"></div>
+					- Extracted batch data from S3 and cleaned & transformed it in Databricks using Spark queries.
+					<div class="skills-section"></div>
+					- Used Airflow on MWAA to orchestrate Databricks workloads.
+					<div class="skills-section"></div>
+					- Streamed data in real-time using AWS Kinesis & performed near real-time analysis using Spark on Databricks.
+				  </p>
 
 				  <h3>Azure Database Migration</h3>
 				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
