adds azure database migration project

--- a/index.html
+++ b/index.html
@@ -286,9 +286,15 @@
 				  </p>
 
 				  <h3>Azure Database Migration</h3>
-				  <p class="info"><a href="" target="_blank">Architecture Diagram</a> </p>
+				  <p class="info"><a href="https://drive.google.com/file/d/1hs83bysETCmqeQwr-5NNsvuBKp7W4S5Q/view?usp=share_link" target="_blank">Architecture Diagram</a> </p>
 
-                  <p>description project 4</p>
+                  <p>
+					<div class="skills-section"></div>
+					- Migrated a production environment database to Azure SQL Database, using Azure Data Studio.
+					- Generated backups of production database & restored as development database for safe testing and experimentation.
+					- Set up disaster recovery solutions for production database. Conducted tests of failover and fallback procedures.
+					- Integrated Microsoft Entra ID authentication with production Azure SQL Database for identity management. 
+				  </p>
 
 				  <h3>AWS Cloud Resume Challenge</h3>
                   <p class="info"><a href="" target="_blank">In Progress</a> </p>
