fixes styling on projects section

--- a/index.html
+++ b/index.html
@@ -291,8 +291,11 @@
                   <p>
 					<div class="skills-section"></div>
 					- Migrated a production environment database to Azure SQL Database, using Azure Data Studio.
+					<div class="skills-section"></div>
 					- Generated backups of production database & restored as development database for safe testing and experimentation.
+					<div class="skills-section"></div>
 					- Set up disaster recovery solutions for production database. Conducted tests of failover and fallback procedures.
+					<div class="skills-section"></div>
 					- Integrated Microsoft Entra ID authentication with production Azure SQL Database for identity management. 
 				  </p>
 
